# OpenSpec

./: README.md  package-lock.json  package.json
python_port/: .gitignore  IMPLEMENTATION_COMPLETE.md  Makefile  PORTING_COMPLETE.md  PORTING_SUMMARY.md  README.md  README_AI_CONFIGURATORS.md  TEST_PORTING_SUMMARY.md  pyproject.toml  pytest.ini  setup-dev-local.sh
python_port/src/openspec/: __init__.py
python_port/src/openspec/cli/: __init__.py  main.py
python_port/src/openspec/cli/commands/: __init__.py  archive.py  change.py  init.py  list_cmd.py  show.py  spec.py  update.py  validate.py  view.py
python_port/src/openspec/core/: __init__.py  change_operations.py  config.py
python_port/src/openspec/core/configurators/: __init__.py  agents.py  base.py  claude.py  cline.py  cursor.py  registry.py
python_port/src/openspec/core/parsers/: __init__.py  markdown_parser.py
python_port/src/openspec/core/schemas/: __init__.py  base.py  change.py  spec.py
python_port/src/openspec/core/templates/: __init__.py  agents_root_stub.py  agents_template.py  (+6 more)
python_port/src/openspec/utils/: __init__.py  file_markers.py  file_system.py
python_port/tests/: __init__.py  test_cli.py  test_commands_show.py  test_commands_validate.py  test_configurators.py  test_core_init.py  test_core_list.py  test_core_parsers.py  test_e2e_cli.py  test_file_markers.py  test_init_integration.py  test_templates.py  test_utils_file_system.py
python_port/tests/cli_e2e/: test_basic.py
python_port/tests/commands/: test_show.py  test_validate.py
python_port/tests/core/: test_archive.py  test_init.py  test_list.py  test_validation.py
python_port/tests/core/parsers/: test_markdown_parser.py
python_port/tests/helpers/: run_cli.py
python_port/tests/schemas/: test_schemas.py
python_port/tests/utils/: test_file_system.py
(+42 files in other folders)
